--- a/termux.html
+++ b/termux.html
@@ -2,10 +2,46 @@
 <html>
 <head>
 <title>Secret Termux Scripts</title>
+  <style type="text/css">
+    body {
+        background-color: #f0f0f2;
+        margin: 0;
+        padding: 0;
+        font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+        
+    }
+    div {
+        width: 600px;
+        margin: 5em auto;
+        padding: 2em;
+        background-color: #fdfdff;
+        border-radius: 0.5em;
+        box-shadow: 2px 3px 7px 2px rgba(0,0,0,0.02);
+    }
+    a:link, a:visited {
+        color: #38488f;
+        text-decoration: none;
+    }
+    @media (max-width: 700px) {
+        div {
+            margin: 0 auto;
+            width: auto;
+        }
+    }
+    </style>
 </head>
 <body>
+  <dir>
 <h1>Ubuntu XFCE Modded</h1>
-<br>
-<p>curl https://cdn.discordapp.com/attachments/849475338102767656/1008338348009598976/cracked_andronix_os.sh | bash</p>
+<p>pkg install dos2unix && curl https://cdn.discordapp.com/attachments/849475338102767656/1008338348009598976/cracked_andronix_os.sh | dos2unix | bash</p>
+  </dir>
+  <dir>
+<h1>Ubuntu KDE Modded</h1>
+<p>pkg install dos2unix && curl https://cdn.discordapp.com/attachments/849475338102767656/1009751449997160468/cracked_kde_mod.sh | dos2unix | bash</p>
+  </dir>
+  <dir>
+<h1>Debian XFCE Modded</h1>
+<p>pkg install dos2unix && curl https://cdn.discordapp.com/attachments/849475338102767656/1009775292639871046/cracked_deb_mod.sh | dos2unix | bash</p>
+  </dir>
 </body>
 </html>
